# dojo-synthetic-gen

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CRUSH.md  Dockerfile  README.md  docker-compose.yml  eslint.config.mjs  main.py  package.json  pyproject.toml  release.config.js  test_routes.py
.github/workflows/: cron.yaml  docker_build.yaml  linter.yaml  semantic_release.yaml
commons/: config.py  prompt_builders.py  qa_examples.py  synthetic.py  types.py
commons/augmenter/: __init__.py  augmenter.py  prompts.py  types.py
commons/cache/: __init__.py  redis.py
commons/dataset/: dataset.py  personas.py
commons/human_feedback/: hf_prompts.py  human_feedback.py  types.py
commons/linter/: __init__.py  linter.py
commons/llm/: __init__.py  llm_api.py
commons/model_lab/: model_lab.py
commons/routes/: health.py  hf_endpoint.py  synthetic_gen.py
commons/utils/: __init__.py  logging.py  utils.py
commons/worker/: __init__.py  worker.py
